# TP-project

./: .gitignore  CMakeLists.txt  Chat.cpp  Data  Data.cpp  DataHandler.cpp  Group.cpp  JsonParser.cpp  Main_menu.cpp  Menu  Menu.cpp  Menus.cpp  Person.cpp  Person_Inner.cpp  Profile_menu.cpp  README.md  Server.cpp  Student_menu.cpp  Task.cpp  UML  a.out  in_out.cpp  libC.cpp  libPTG.cpp  libST.cpp  library.h  libs.h  main  main.cpp  main.py  scripts (4).py  scripts.py  storage.txt
client/: main.py  scripts.py  scriptsmy.py
server/: CMakeLists.txt  Chat.cpp  Data.cpp  Group.cpp  JsonParser.cpp  Person.cpp  Server.cpp  Task.cpp  a.out  main.cpp  storage.txt
