cmake_minimum_required(VERSION 3.15)
project(TP_project)

set(CMAKE_CXX_STANDARD 20)

add_executable(TP_project main.cpp)
add_library(main_header SHARED library.h)
set_target_properties(main_header PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project main_header)
add_library(chat_lib SHARED Chat.cpp)
set_target_properties(chat_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project chat_lib)
add_library(data_lib SHARED Data.cpp)
set_target_properties(data_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project data_lib)
add_library(group_lib SHARED Group.cpp)
set_target_properties(group_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project group_lib)
add_library(menu_lib SHARED Menu.cpp)
set_target_properties(menu_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project menu_lib)
add_library(person_lib SHARED Person.cpp)
set_target_properties(person_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project person_lib)
add_library(task_lib SHARED Task.cpp)
set_target_properties(task_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project task_lib)
