cmake_minimum_required(VERSION 3.15)
project(TP_project)

set(CMAKE_CXX_STANDARD 17)

add_executable(TP_project main.cpp)
add_library(main_header SHARED library.h)
add_library(chat_lib SHARED Chat.cpp)
add_library(data_lib SHARED Data.cpp)
add_library(group_lib SHARED Group.cpp)
add_library(menu_lib SHARED Menu.cpp)
add_library(person_lib SHARED Person.cpp)
add_library(task_lib SHARED Task.cpp)
add_library(datahandler SHARED JsonParser.cpp)
add_library(json SHARED json.hpp)
set_target_properties(main_header chat_lib data_lib group_lib menu_lib person_lib task_lib datahandler json PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(TP_project main_header chat_lib data_lib group_lib menu_lib person_lib task_lib datahandler json)
